# meteors

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  Taskfile.yml  deny.toml  justfile  package-lock.json  package.json  rust-toolchain  rust-toolchain.toml  tailwind.config.js  varela.c
crates/enrgy/: .gitignore  Cargo.toml  README.md
crates/enrgy/fuzz/debugger/: Cargo.toml
crates/enrgy/fuzz/debugger/src/: main.rs
crates/enrgy/fuzz/fuzz_seeds/: 001.http  003.http
crates/enrgy/src/: app.rs  error.rs  extensions.rs  handler.rs  lib.rs  middleware.rs  response.rs  route.rs  server.rs  service.rs
crates/enrgy/src/extractor/: body.rs  data.rs  header.rs  mod.rs  param.rs  query.rs
crates/enrgy/src/http/: headers.rs  mod.rs  status.rs  uri.rs
crates/enrgy/src/http/encoding/: form.rs  percent.rs
crates/enrgy/src/response/: into_response.rs  into_response_parts.rs  mod.rs
crates/enrgy/src/utils/: array_map.rs  mod.rs  path_tree.rs  thread_pool.rs
crates/enrgy/src/utils/signal/: mod.rs  unix.rs  windows.rs
crates/enrgy/tests/: parse_request.rs
crates/html-parser/: Cargo.toml
crates/html-parser/src/: lib.rs
crates/html-parser/src/dom/: formatting.rs  node.rs
crates/html-parser/src/grammar/: mod.rs  rules.pest
crates/varela/: Cargo.toml  build.rs
crates/varela-command-index/: Cargo.toml
crates/varela-command-index/src/: lib.rs
crates/varela-command-serve/: Cargo.toml  wip.md
crates/varela-command-serve/src/: filters.rs  lib.rs  router.rs  search.rs  template.rs  utils.rs
crates/varela-command-serve/src/handlers/: download.rs  entity.rs  index.rs  mod.rs  opds.rs  search.rs  story.rs
crates/varela-command-serve/src/templates/: layout.rs
crates/varela-command-serve/src/templates/pages/: chapter.rs  index.rs  mod.rs  search.rs
crates/varela-command-serve/src/templates/partials/: link.rs  origin_list.rs  pagination.rs  story.rs  tag_list.rs
crates/varela-command-serve/templates/: layout.hbs
crates/varela-command-serve/templates/pages/: chapter.hbs  error.hbs  opds-feed.hbs
crates/varela-command-serve/templates/partials/: nav-entry.hbs  nav.hbs
crates/varela-common/: Cargo.toml
crates/varela-common/src/: colorize.rs  database.rs  error.rs  lib.rs  logger.rs  models.rs  utils.rs
crates/varela-format-ao3/: Cargo.toml
crates/varela-format-ao3/src/: html.rs  lib.rs
crates/varela-format-ao3/src/tests/: html.rs  mod.rs
crates/varela/assets/: manifest.rc
crates/varela/src/: main.rs
crates/vfmt/: Cargo.toml  README.md
crates/vfmt-macros/: Cargo.toml
crates/vfmt-macros/src/: lib.rs
crates/vfmt/src/: helpers.rs  lib.rs  macros.rs  stdio.rs  write.rs
crates/vfmt/src/impls/: array.rs  core.rs  ixx.rs  mod.rs  nz.rs  ptr.rs  std.rs  tuple.rs  uxx.rs
crates/vfmt/src/utils/: colorize.rs  log.rs  mod.rs
html-parser/: Cargo.toml
html-parser/src/: error.rs  lib.rs
html-parser/src/dom/: element.rs  mod.rs  node.rs
html-parser/src/grammar/: rules.pest
meteors/: Cargo.toml
meteors-command-index/: Cargo.toml
meteors-command-index/src/: lib.rs
meteors-command-serve/: Cargo.toml
meteors-command-serve/assets/: style.css  style.scss
meteors-command-serve/src/: filters.rs  lib.rs  router.rs  search.rs  utils.rs  views.rs
meteors-command-serve/src/handlers/: download.rs  index.rs  mod.rs  search.rs  story.rs
meteors-command-serve/src/templates/: layout.hbs.rs  layout.rs
meteors-command-serve/src/templates/pages/: chapter.hbs.rs  chapter.rs  download.hbs.rs  index.hbs.rs  mod.rs  search.hbs.rs  search.rs
meteors-command-serve/src/templates/partials/: mod.rs  origin_list.hbs.rs  origin_list.rs  story.hbs.rs  story.rs  tag_list.hbs.rs  tag_list.rs
meteors-command-serve/templates/: layout.hbs  layout.stpl
meteors-command-serve/templates/pages/: chapter.hbs  download.hbs  index.hbs  index.stpl  search.hbs  search.stpl
meteors-command-serve/templates/partials/: origin-list.stpl  story.hbs  story.stpl  tag-list.hbs  tag-list.stpl
meteors-common/: Cargo.toml  build.rs
meteors-common/src/: database.rs  lib.rs  logger.rs  models.proto  models.rs  utils.rs
meteors-common/src/models/: mod.rs  proto.rs
meteors/assets/: manifest.rc
meteors/command/config/: Cargo.toml
meteors/command/config/src/: lib.rs
meteors/command/index/: Cargo.toml
meteors/command/index/src/: lib.rs
meteors/command/serve/: Cargo.toml
meteors/command/serve/src/: lib.rs  router.rs  search.rs  utils.rs
meteors/command/serve/src/handlers/: entity.rs  index.rs  mod.rs  opds.rs  search.rs  story.rs
meteors/command/serve/src/templates/: .gitattributes  layout.rs  mod.rs
meteors/command/serve/templates/: layout.hbs
meteors/command/serve/templates/pages/: chapter.hbs  index.hbs  opds-feed.hbs  search2.hbs
meteors/command/serve/templates/partials/: link.hbs  nav-entry.hbs  nav.hbs  pagination.hbs  (+4 more)
meteors/common/: Cargo.toml
meteors/common/src/: database.rs  lib.rs  models.rs  utils.rs
meteors/format/ao3/: Cargo.toml
meteors/format/ao3/src/: lib.rs
meteors/src/: gztar.rs  main.rs  views.rs
meteors/src/commands/: mod.rs
meteors/src/commands/index/: mod.rs
meteors/src/commands/serve/: handlers.rs  mod.rs  views.rs
meteors/src/data/: mod.rs  search.rs
meteors/src/format/: html.rs  mod.rs
meteors/src/format/tests/: Disrupt.epub  Disrupt.html  html.rs  mod.rs  testing backdating.epub  testing backdating.html
meteors/src/regex/: mod.rs  regex.fwd.littleendian.dfa  regex.rev.littleendian.dfa
meteors/templates/: layout.stpl
query/: Cargo.toml
query/macros/: Cargo.toml
query/macros/src/: lib.rs
query/src/: lib.rs
varela/: Cargo.toml
varela/command/config/: Cargo.toml
varela/command/config/src/: lib.rs
varela/command/index/: Cargo.toml
varela/command/index/src/: lib.rs
varela/command/serve/: Cargo.toml
varela/command/serve/assets/: style.scss
varela/command/serve/src/: lib.rs  router.rs
varela/common/: Cargo.toml
varela/common/src/: database.rs  lib.rs  logger.rs  models.rs  utils.rs
varela/format/ao3/: Cargo.toml
varela/format/ao3/src/: html.rs
varela/src/: main.rs
(+188 files in other folders)
