[workspace]
members = [
    "crates/aloene",
    "crates/aloene-macros",
    "crates/html-parser",
    "crates/opal",
    "crates/opal-macros",
    "crates/markup-parser",
    "crates/mini-html-parser",
    "crates/query",
    "crates/query-macros",
    "crates/varela",
    "crates/varela-command-config",
    "crates/varela-command-index",
    "crates/varela-command-serve",
    "crates/varela-common",
    "crates/varela-format-ao3",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
