[workspace]
resolver = "2"
members = [
    "crates/aloene",
    "crates/aloene-macros",
    "crates/eaves",
    "crates/eaves-vm",
    "crates/enrgy",
    "crates/html-parser",
    "crates/markup-parser",
    "crates/opal",
    "crates/opal-macros",
    "crates/query",
    "crates/query-macros",
    "crates/varela",
    "crates/varela-command-config",
    "crates/varela-command-index",
    "crates/varela-command-serve",
    "crates/varela-common",
    "crates/varela-format-ao3",
    "crates/vfmt",
    "crates/vfmt-log",
    "crates/vfmt-macros",
]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [ "std" ] }
crc32fast = "1.2"
fastrand = "2.1"
fs2 = "0.4"
getrandom = "0.2"
honeycomb = "0.1.4"
humantime = "2.1"
itoa = "1.0"
libc = "0.2"
log = "0.4" # TODO: remove dependency on this
memmap2 = "0.9"
miniz_oxide = "0.7"
nix = "0.28"
once_cell = "1.8"
pest = "2.1"
pest_derive = "2.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [ "full" ] }
venial = "0.6"
winapi = { version = "0.3", features = [ "consoleapi", "handleapi", "synchapi", "winbase" ] }
zip = { version = "1.1", default-features = false, features = [ "deflate" ] } # TODO: remove dependency on this

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
