[package]
name = "html_parser"
version = "0.6.2"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"
repository = "https://github.com/mathiversen/html-parser"
license = "MIT"
description = "A simple and general purpose html/xhtml parser"
keywords = ["html", "parser", "json", "pest", "dom"]
categories = ["parsing", "web-programming"]
readme = "README.md"

workspace = ".."

[dependencies]
pest = "2.1"
pest_derive = "2.1"
