[package]
name = "meteors-command-serve"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
common = { path = "../meteors-common", package = "meteors-common" }
opal = { path = "../opal" }
tiny_http-router = { path = "../tiny_http-router" }

argh = "0.1"
chrono = "0.4"
ctrlc = "3.1"
form_urlencoded = "1.0"
once_cell = "1.8"
path-tree = "0.1"
percent-encoding = "2.1"
qstring = "0.7"
tiny_http = "0.8"
