[package]
name = "meteors-command-serve"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
common = { path = "../meteors-common", package = "meteors-common" }
opal = { path = "../opal" }

argh = "0.1"
chrono = "0.4"
enrgy = "0.2"
form_urlencoded = "1.0"
once_cell = "1.8"
percent-encoding = "2.1"
qstring = "0.7"
