[package]
name = "meteors-common"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

workspace = ".."

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false }
either = "1.6"
flate2 = "1.0"
log = { version = "0.4", features = [ "std" ] }
owo-colors = "2.0"
prost = "0.7"
rand = "0.8"
