[package]
name = "meteors-common"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
aloene = { path = "../aloene" }

anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [ "clock" ] }
either = "1.6"
flate2 = "1.0"
fs2 = "0.4"
log = { version = "0.4", features = [ "std" ] }
memmap2 = "0.2"
owo-colors = "2.0"
rand = "0.8"

[build-dependencies]
prost-build = "0.7"
