[package]
name = "meteors"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
common = { path = "../meteors-common", package = "meteors-common" }

command-config = { path = "../meteors-command-config", package = "meteors-command-config" }
command-index = { path = "../meteors-command-index", package = "meteors-command-index" }
command-serve = { path = "../meteors-command-serve", package = "meteors-command-serve" }

argh = "0.1"

[build-dependencies]
embed-resource = "1.3"
