[package]
name = "enrgy"
version = "0.2.2"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

description = "A (nightly) lightweight synchronous Actix-like HTTP server"
repository = "https://github.com/Txuritan/enrgy"

license = "MIT"

workspace = "../.."

keywords = [ "synchronous", "http", "server", "nightly" ]

[features]
compression = [ ]

[dependencies]
libc = "0.2"
log = "0.4" # TODO: remove dependency on this
miniz_oxide = "0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "consoleapi", "handleapi", "synchapi", "winbase" ] }
