[package]
name = "enrgy"
version = "0.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

description = "A (nightly) lightweight synchronous Actix-like HTTP server"
repository = "https://github.com/Txuritan/enrgy"

license = "MIT"

workspace = "../.."

keywords = [ "synchronous", "http", "server", "nightly" ]

[features]
default = [ "vfmt" ]
compression = [ ]


[dependencies]
itoa.workspace = true
log.workspace = true
miniz_oxide.workspace = true
vfmt = { path = "../vfmt", optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
