[package]
name = "html_parser"
version = "0.6.2"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2021"
repository = "https://github.com/mathiversen/html-parser"
license = "MIT"
description = "A simple and general purpose html/xhtml parser"
keywords = ["html", "parser", "json", "pest", "dom"]
categories = ["parsing", "web-programming"]
readme = "README.md"

workspace = "../.."

[dependencies]
pest.workspace = true
pest_derive.workspace = true
