[package]
name = "varela-command-index"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[dependencies]
common = { path = "../varela-common", package = "varela-common" }

format-ao3 = { path = "../varela-format-ao3", package = "varela-format-ao3" }

crc32fast = "1.2"
humantime = "2.1"
zip = { version = "0.5", default-features = false, features = [ "deflate" ] }
