[package]
name = "varela-command-index"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[dependencies]
common = { path = "../varela-common", package = "varela-common" }

format-ao3 = { path = "../varela-format-ao3", package = "varela-format-ao3" }

crc32fast.workspace = true
humantime.workspace = true
vfmt = { path = "../vfmt" }
zip.workspace = true
