[package]
name = "varela-command-serve"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[dependencies]
common = { path = "../varela-common", package = "varela-common" }
opal = { path = "../opal" }

chrono = { version = "0.4", default-features = false, features = [ "std" ] }
enrgy = { path = "../enrgy" }
humantime = "2.1"
once_cell = "1.8"
vfmt = { path = "../vfmt" }
