[package]
name = "varela-command-serve"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[features]
default = ["std", "nostd"]
std = []
nostd = []

[dependencies]
common = { path = "../varela-common", package = "varela-common" }
opal = { path = "../opal" }

chrono.workspace = true
enrgy = { path = "../enrgy" }
humantime.workspace = true
once_cell.workspace = true
vfmt = { path = "../vfmt" }
