[package]
name = "varela-common"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[dependencies]
aloene = { path = "../aloene" }

anyhow = "1.0"
fastrand = "1.4"
fs2 = "0.4"
getrandom = "0.2"
log = { version = "0.4", features = [ "std" ] }
memmap2 = "0.5"
miniz_oxide = "0.4"
owo-colors = "3.0"
