[package]
name = "varela-common"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[dependencies]
aloene = { path = "../aloene" }

anyhow = "1.0"
fastrand = "1.4"
fs2 = "0.4"
getrandom = "0.2"
memmap2 = "0.5"
miniz_oxide = "0.5.1"
vfmt = { path = "../vfmt", features = [ "std" ] }
vfmt-log = { path = "../vfmt-log" }
