[package]
name = "varela-common"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[dependencies]
aloene = { path = "../aloene" }

anyhow.workspace = true
fastrand.workspace = true
fs2.workspace = true
getrandom.workspace = true
memmap2.workspace = true
miniz_oxide.workspace = true
vfmt = { path = "../vfmt", features = [ "std" ] }
vfmt-log = { path = "../vfmt-log" }
