[package]
name = "varela"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[dependencies]
common = { path = "../varela-common", package = "varela-common" }

command-config = { path = "../varela-command-config", package = "varela-command-config" }
command-index = { path = "../varela-command-index", package = "varela-command-index" }
command-serve = { path = "../varela-command-serve", package = "varela-command-serve" }

vfmt = { path = "../vfmt" }
