[package]
name = "vfmt-macros"
version = "0.1.0"
authors = [ "Jorge Aparicio <jorge@japaric.io>", "Txuritan <txuritan@protonmail.com>" ]
edition = "2021"

license = "MIT"

workspace = "../.."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] } # TODO: remove this
