[package]
name = "meteors-command-index"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = "../../.."

[dependencies]
common = { path = "../../common", package = "meteors-common" }

format-ao3 = { path = "../../format/ao3", package = "meteors-format-ao3" }

crc32fast = "1.2"
zip = { version = "0.5", default-features = false, features = [ "deflate" ] }
