[package]
name = "meteors-command-serve"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = "../../.."

[dependencies]
common = { path = "../../common", package = "meteors-common" }
opal = { path = "../../../opal" }

chrono = { version = "0.4", default-features = false, features = [ "std" ] }
enrgy = { git = "https://github.com/Txuritan/enrgy" }
form_urlencoded = "1.0"
once_cell = "1.8"
percent-encoding = "2.1"
qstring = "0.7"
