[package]
name = "meteors-format-ao3"
version = "0.1.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = "../../.."

[dependencies]
common = { path = "../../common", package = "meteors-common" }

query = { path = "../../../query" }

flate2 = "1.0"
zip = { version = "0.5", default-features = false, features = [ "deflate" ] }
